--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,12 @@
-.encryptedKey.json
 node_modules
 .env
 coverage
 coverage.json
 typechain
-
-# vscode
-.vscode
-
-#Hardhat files
-cache
-artifacts
-.DS_Store
-gas-report.txt
+typechain-types
 deployments
 
-# Patrick
-.notes.md
+# Hardhat files
+cache
+artifacts
+
